# FinFruad-RAG

./: .gitignore  AGENTS.md  README.md  README_ZH.md  arch.md  exp.md  extra.md  main.py  method.md  pyproject.toml
SPECS/: 01_项目初始化与骨架搭建.md  02_离线知识库构建流水线.md  03_在线双检索与判别服务.md  04_前端页面与交互集成.md  05_自动化评估与实验日志.md  06_统一交付与可运维性完善.md
backend/: app.py
backend/.chroma/: chroma.sqlite3
backend/core/: bm25.py  detect.py  eval.py  health.py  ingest.py  logging_utils.py  settings.py
backend/models/: api.py  knowledge.py
backend/providers/: embedding_client.py  llm_client.py
backend/scripts/: ingest_kb.py  run_eval.py  run_eval_smoke.py  run_no_rag_eval.py  run_rag_eval.py
backend/service/: detect.py  health.py  kb.py
backend/storage/: chroma_store.py
scripts/: ingest_one.ps1  run_eval.ps1  run_eval_smoke.ps1  start_backend.ps1  start_webui.ps1
webui/app/: globals.css  layout.tsx  page.tsx
webui/lib/: detect-api.ts  kb-api.ts
webui/types/: detect.ts  ingest.ts
